--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
+    "images-scraper": "^6.3.0",
     "ms": "^2.1.3",
     "yt-search": "^2.9.0",
     "ytdl-core": "^4.8.3"
